# licrice-standalone

./: README.md  pyproject.toml  requirements.txt  run_licrice.py
licrice/: __init__.py  spatial.py  testing.py  utilities.py
licrice/aggregation/: aggregate_storm_admin.py
licrice/io/: ibtracs.py
licrice/licrice/: dist_funcs.py  preprocess.py  run.py  utils.py  vortex_funcs.py
licrice/tracks/: __init__.py  radius.py  utils.py  velocity.py
licrice_standalone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
